refactor: easier signatures for agent, yar(ename)
